--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+src/secrets*
+
+
+.DS_Store
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -13,7 +17,7 @@ develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
+.eggs/  
 lib/
 lib64/
 parts/
